[package]
name = "bitcoin_address_hunter"
version = "0.1.0"
edition = "2024"

[dependencies]
secp256k1 = { version = "0.31.1", features = ["rand", "std", "global-context"] }
sha2 = { version = "0.10.8", features = ["asm"] }
ripemd = { version = "0.2.0-rc.0" }
bs58 = "0.5.1"
rand = "0.9.0"
hex = "0.4.3"
num_cpus = "1.17.0"
ctrlc = "3.4.7"
clap = { version = "4.5", features = ["derive"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
rayon = "1.10.0"
indicatif = "0.18.0"
libc = "0.2.174"
num = "0.4.3"
rand_chacha = "0.9.0"
signal-hook = "0.3.18"
crossbeam = "0.8.4"
cuckoofilter = "0.5.0"
bloomfilter = "3.0.1"
rand_core = "0.9.3"

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = "thin"

